ca-certificates (20130508) UNRELEASED; urgency=low

  * TODO: NEWS entries, https://bugzilla.mozilla.org/show_bug.cgi?id=850003
  * Install CAcert root and class3 certificates individually, no longer
    installing the concatenation of the two. The individual certificates
    are installed as cacert.org_root.crt and cacert.org_class3.crt for ease
    of identification. Additionally, this allows openssl maintainers to drop
    a problematic patch to c_rehash for handling multi-certificate files.
    (see #642314)  Closes: #692323
  * Remove obsolete debconf.org CA certificate. DebConf now uses an
    intermediate certificate signed by SPI.  Closes: #693405
  * Remove obsolete SPI CA certiticate.
  * Update Standards-Version: 3.9.4 (no changes needed)
  * Update Vcs-* fields for lintian vcs-field-not-canonical
  * Update to machine-readable debian/copyright file v1.0
  * Clean up man page (LP#: 850997).

 -- Michael Shuler <michael@pbandjelly.org>  Wed, 15 May 2013 11:57:18 -0500

ca-certificates (20130119) unstable; urgency=low

  * Update mozilla/certdata.txt to version 1.87  Closes: #697366
    Certificates removed (-) (none added):
    - "TÜRKTRUST Elektronik Sertifika Hizmet Sağlayıcısı"
  * Remove unneeded and confusing usage of interest-noawait; remove unneeded
    Pre-Depends on dpkg. Thanks to Guillem Jover for the help and patch.
    Closes: #537051

 -- Michael Shuler <michael@pbandjelly.org>  Sat, 19 Jan 2013 14:02:09 -0600

ca-certificates (20121114) unstable; urgency=low

  [ Don Armstrong ]
  * Breaks ca-certificates-java (<<20121112+nmu1); partially fixing #537051.
  * Provide update-ca-certificates and update-ca-certificates-fresh
    triggers.
  * Call the triggers using no-await so that the configuration files from
    the newer version of ca-certificates-java are in places before the
    upgrade. Closes: #537051.

  [ Michael Shuler ]
  * Add note to previous mozilla/certdata.txt changelog entry to document
    CKT_NSS_MUST_VERIFY_TRUST changes.
