@@ -5,8 +5,6 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-VERSION := $(shell dpkg-parsechangelog | sed -ne 's/^Version: //p')
-
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
@@ -56,7 +54,7 @@ install: build
 	   fi; \
 	 done; \
 	 cd $(CURDIR)/debian; \
-	 sed -e "s|#INITIAL_CERTS#|$$crts|" -e "s|#VERSION#|$(VERSION)|" \
+	 sed -e "s|#INITIAL_CERTS#|$$crts|" \
 		config.in > config)
 
 # Build architecture-independent files here.
