@@ -1,5 +1,6 @@
 ca-certificates (20130508) UNRELEASED; urgency=low
 
+  [ Michael Shuler ]
   * TODO: NEWS entries, https://bugzilla.mozilla.org/show_bug.cgi?id=850003
   * Install CAcert root and class3 certificates individually, no longer
     installing the concatenation of the two. The individual certificates
@@ -14,6 +15,9 @@ ca-certificates (20130508) UNRELEASED; urgency=low
   * Update Vcs-* fields for lintian vcs-field-not-canonical
   * Update to machine-readable debian/copyright file v1.0
   * Clean up man page (LP#: 850997).
+
+  [ Thijs Kinkhorst ]
+  * Drop upgrading code for upgrades from Debian Etch and earlier. 
 
  -- Michael Shuler <michael@pbandjelly.org>  Wed, 15 May 2013 11:57:18 -0500
 
